syntax = "proto3";
package proto;

import "msgenum.proto";

message Response {
  int64 seqId = 1; //消息的编号
  RESULT_TYPE result = 2; //返回结果
  EntityInfoChangeResponse entityChangeResponse = 3;
}

message EntityInfoChangeResponse {
  bool changeResult = 1; //改变结果是否有效
}

message HeroQuitResponse { //玩家退出通知
  bool quitResponse = 1;
}
